--- a/package.json
+++ b/package.json
@@ -6,18 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "serverless offline start"
   },
   "dependencies": {
+    "dompurify": "^3.0.8",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "jsdom": "^24.0.0",
+    "mongoose": "^8.1.1",
+    "next": "14.1.0",
+    "next-auth": "^4.24.5",
+    "next-secure-headers": "^2.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "serverless": "^3.38.0",
+    "serverless-http": "^3.2.0",
+    "serverless-offline": "^13.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
