--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "serverless offline start"
+    "server": "serverless offline start",
+    "test": "jest"
   },
   "dependencies": {
     "dompurify": "^3.0.8",
@@ -24,13 +25,20 @@
     "serverless": "^3.38.0",
     "serverless-http": "^3.2.0",
     "serverless-offline": "^13.3.3",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "autoprefixer": "^10.0.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
+    "react-test-renderer": "^18.2.0",
+    "supertest": "^6.3.4",
     "tailwindcss": "^3.3.0"
   }
 }
