--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "fs": "^0.0.1-security",
     "jsdom": "^24.0.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
