--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_ENV=development next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production next start",
     "lint": "next lint",
     "server": "serverless offline start",
     "test": "jest"
@@ -23,13 +23,15 @@
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "next-secure-headers": "^2.2.0",
+    "prom-client": "^15.1.0",
     "react": "^18",
     "react-dom": "^18",
     "serverless": "^3.38.0",
     "serverless-http": "^3.2.0",
     "serverless-offline": "^13.3.3",
     "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
