--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss": "^8",
     "react-test-renderer": "^18.2.0",
     "supertest": "^6.3.4",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "url-loader": "^4.1.1"
   }
 }
