--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^7.1.5",
     "fs": "^0.0.1-security",
     "jsdom": "^24.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
@@ -30,8 +31,6 @@
     "serverless": "^3.38.0",
     "serverless-http": "^3.2.0",
     "serverless-offline": "^13.3.3",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
     "winston": "^3.11.0"
   },
   "devDependencies": {
